05-cicd-pipeline/devsecops-demo/k8s/hardened/dvwa-hardened.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hardened-apps
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: hardened-apps
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: hardened-apps
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
        securityContext:
          allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Service
metadata:
  name: dvwa-service
  namespace: hardened-apps
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30081
  selector:
    app: dvwa
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dvwa-deployment
  namespace: hardened-apps
spec:
  selector:
    matchLabels:
      app: dvwa
  template:
    metadata:
      labels:
        app: dvwa
    spec:
      containers:
      - name: dvwa
        image: vulnerables/web-dvwa
        ports:
        - containerPort: 80
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: isolate-mysql
  namespace: hardened-apps
spec:
  podSelector:
    matchLabels:
      app: mysql
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: dvwa
    ports:
    - protocol: TCP
      port: 3306
